--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#2a6e3f">
     <title>PoultryPro | Farm Management System</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -1019,11 +1019,11 @@
     </div>
 
     <!-- Remove the empty script tag and replace with actual script loading -->
-    <script src="/js/database.js"></script>
-    <script src="/js/batches.js"></script>
-    <script src="/js/feed.js"></script>
-    <script src="/js/pos.js"></script>
-    <script src="/js/sales.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="js/database.js"></script>
+    <script src="js/batches.js"></script>
+    <script src="js/feed.js"></script>
+    <script src="js/pos.js"></script>
+    <script src="js/sales.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
